Some emma-fixes, webm works on firefox!

--- a/flasquelistan/static/css/streque.css
+++ b/flasquelistan/static/css/streque.css
@@ -277,6 +277,7 @@ ol.transaction-history li .value {
 
 #emma {
     object-fit: cover;
+    display: block;
     border-radius: 50%;
     width: 0;
     height: 0;
@@ -290,5 +291,3 @@ ol.transaction-history li .value {
     transition: width .1s, height .1s;
     transition-timing-function: linear;
 }
-
-
